--- a/app1/src/app/topo/topo.component.html
+++ b/app1/src/app/topo/topo.component.html
@@ -1,1 +1,3 @@
-<p class="exemplo">topo do component</p>
+<nav class="navbar navbar-inverse bg-faded">
+        <a class="navbar-brand" href="#">Aprendendo inglês!</a>
+</nav>
