--- a/app1/src/app/painel/painel.component.html
+++ b/app1/src/app/painel/painel.component.html
@@ -1,5 +1,8 @@
 <p>
   painel works!
 </p>
+
 <app-progresso></app-progresso>
 <app-tentativas></app-tentativas>
+
+<button class="btn btn-primary">Test</button>
